# AEGIS

./: .antigravityrules  .clinerules  .cursorrules  .gitignore  .pre-commit-config.yaml  .windsurfrules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  osascript  test.py  test_aegis_guardian.py  test_guardian.py  test_notify.py  test_notify_mac.py
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: ai.rs  analyzer.rs  error.rs  event.rs  explain.rs  graph.rs  lib.rs  model.rs  policy.rs  risk.rs
crates/aegis-core/tests/: intake.rs  invariants.rs
python/aegis-ai/: .env.example  Dockerfile  README.md  advanced_attack_simulation.py  aegis_guardian.py  attack_simulation.py  extreme_simulation.py  pentest.py  pyproject.toml  pyrightconfig.json  requirements.txt
python/aegis-ai/forensics/: incident_33333333-3333-4000-8000-333333333333.json  incident_44444444-4444-4000-8000-444444444444.json
python/aegis-ai/src/: cli_tui.py  context_parser.py  llm.py  main.py  security.py  telemetry.py  threat_intel.py
python/aegis-ai/src/orchestrator/: __init__.py  governance.py  router.py
python/aegis-ai/src/plugins/: __init__.py  registry.py
python/aegis-ai/src/sandbox_os/: __init__.py  kernel.py  memory.py
python/aegis-ai/src/tier5/: __init__.py  context_ops.py  digital_twin.py  economic_optimization.py  meta_governance.py  provenance.py  resilience_chaos.py  temporal_causal.py
python/aegis-ai/tests/: benchmark_repo_intake.py  test_aegis_guardian.py  test_api.py  test_context_parser.py  test_guardian_security.py  test_integration.py  test_red_team.py
python/aegis-ai/tests/plugins/: test_registry.py
python/aegis-ai/tools/: check_ai_plugins.py  update_threat_patterns.py
(+49 files in other folders)
